--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -23,26 +23,30 @@
     &__image img{
         border-radius: 100%;
         width: 150px;
-        height: auto;
-       // border-style: solid;
-        //border-color: #5d605ec9;
+        height: auto;     
     }
     &__info{
         display: flex;
         flex-direction: column;
     }
 }
+.unknown{
+    border-radius: 100%;
+    width: 150px;
+    height: 150px;
+    border: 3px solid #dfded2;
+}
 .dead{
     border-radius: 100%;
     width: 150px;
     height: 150px;
-    border: 2px solid #47131bc9;
+    border: 3px solid #BC0000;
 }
 .alive{
     border-radius: 100%;
     width: 150px;
     height: 150px;
-    border: 2px solid #179a36c9;
+    border: 3px solid #37745B;
 }
 .pagination {   
     display: inline-block;
